apps/overlays/nasa/ntfy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
  labels:
    app: ntfy
